# rustdiff

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: cli.rs  fsio.rs  main.rs
src/.github/workflows/: release.yml
src/diff/: data.rs  mod.rs  myers.rs  render.rs
src/diff/core/: mod.rs  myers.rs  patience.rs
src/diff/modes/: char.rs  line.rs  mod.rs  word.rs
src/diff/render/: line.rs  mod.rs  side_by_side.rs  unified.rs  word.rs
