[package]
name = "rustdiff"
version = "0.1.0"
edition = "2024"

[dependencies]
ansi-to-html = "0.2.2"
clap = { version = "4.5.51", features = ["derive"] }
html-escape = "0.2.13"
regex = "1.12.2"

[profile.release]
strip = true
panic = "abort"
overflow-checks = false
opt-level = 3
lto = "fat"
codegen-units = 1
debug = false

[profile.dist]
inherits = "release"
opt-level = "z"
lto = "thin"
codegen-units = 1
panic = "abort"
strip = true
overflow-checks = false
debug = false
